--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_GROQ_API_KEY='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'
 NEXT_PUBLIC_ETH_RPC_URL='https://1rpc.io/sepolia'
+NEXT_PUBLIC_PROJECT_ID='fa687c43ed77d30ec7bc3a21c8b027bb'
