--- a/package.json
+++ b/package.json
@@ -18,16 +18,23 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.56.2",
+    "@web3modal/ethers": "5.1.3",
+    "@web3modal/siwe": "5.1.3",
+    "@web3modal/wagmi": "5.1.3",
     "ai": "^3.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ethers": "^6.13.2",
     "lucide-react": "^0.441.0",
     "next": "14.2.10",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.15",
+    "wagmi": "^2.12.14"
   },
   "devDependencies": {
     "@types/node": "^20",
