--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@tanstack/react-query": "^5.56.2",
-    "@web3modal/ethers": "5.1.3",
-    "@web3modal/siwe": "5.1.3",
-    "@web3modal/wagmi": "5.1.3",
+    "@tanstack/react-query": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
+    "@web3modal/ethers": "^5.1.3",
+    "@web3modal/siwe": "^5.1.3",
+    "@web3modal/wagmi": "^5.1.3",
     "ai": "^3.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "eslint": "^9.11.1",
+    "eslint-config-next": "14.2.10",
     "ethers": "^6.13.2",
     "lucide-react": "^0.441.0",
     "next": "14.2.10",
@@ -40,7 +44,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint-config-next": "14.2.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
