--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@langchain/core": "^0.3.3",
     "@langchain/groq": "^0.1.1",
     "@langchain/langgraph": "^0.2.8",
+    "@openzeppelin/contracts": "^5.0.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.54.1",
     "@web3modal/ethers": "^5.1.3",
     "@web3modal/siwe": "^5.1.3",
     "@web3modal/wagmi": "^5.1.3",
     "ai": "^3.4.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ethers": "^6.13.2",
@@ -31,6 +34,9 @@
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "react-minimal-pie-chart": "^8.4.0",
+    "solc": "^0.8.27",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.15",
