--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@langchain/core": "^0.3.3",
     "@langchain/groq": "^0.1.1",
     "@langchain/langgraph": "^0.2.8",
+    "@langchain/openai": "^0.3.2",
     "@openzeppelin/contracts": "^5.0.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.54.1",
     "@web3modal/ethers": "^5.1.3",
