--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "wagmi": "^2.12.14"
   },
   "devDependencies": {
+    "@permaweb/aoconnect": "^0.0.61",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
