--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@web3modal/siwe": "^5.1.3",
     "@web3modal/wagmi": "^5.1.3",
     "ai": "^3.4.0",
+    "arweave-wallet-kit": "^1.0.7",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
